# AI-Powered-Resume-Analyzer

./: .env.example  .gitignore  App.tsx  CICD_SETUP.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COMPLETE_FINAL.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.minimal  Dockerfile.ultra  EXAMPLES.md  FINAL_DEPLOYMENT_GUIDE.md  GETTING_STARTED.md  LICENSE.txt  LIVE_DEPLOYMENT_LINKS.md  MODERN_TECH_STACK.md  NETLIFY_DEPLOYMENT.md  PROJECT_COMPLETION_SUMMARY.md  QUICKSTART.md  README.md  REPOSITORY_UPDATE_COMPLETE.md  SETUP_COMPLETE.md  app.py  build.sh  check_deployment.py  config.py  database.py  database_production.py  deploy.sh  deployment_selector.py  docker-compose.simple.yml  docker-compose.yml  index.html  main.py  main_simple.py  meta.json  netlify.toml  ngrok.yml  package-lock.json  (+18 more)
.github/: WORKFLOWS.md
.github/workflows/: backend-ci.yml  changelog.yml  deploy-production.yml  deploy-staging.yml  docker-build.yml  security-scan.yml
.netlify/: config.py
analyzer/: __init__.py  feedback_generator.py  parser.py  ranker.py  role_benchmarks.json
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/api/: main.py
backend/api/routes/: analyze.py  match.py  optimize.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: router.py
backend/app/core/: exceptions.py  logging.py
backend/app/db/: base.py  session.py
backend/app/models/: job.py  match.py  resume.py  user.py
backend/core/: __init__.py  analyzer.py  matcher.py  resume_optimizer.py  skills_extractor.py
backend/data/: ats_keywords.json  job_keywords.json  skills.txt
backend/database/: models.py  operations.py
backend/utils/: file_processor.py  text_utils.py
components/: CandidateChart.tsx  FileUpload.tsx  Layout.tsx
deployment/: Dockerfile  deploy.sh  docker-compose.yml
frontend/: .env.development  .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  CandidateRanking.js  Footer.js  Header.js  ResumeAnalyzerForm.js
frontend/src/components/: JobMatcher.js  MatchScoreCard.js  ResumeOptimizer.js  SkillsGapAnalysis.js
frontend/src/pages/: Dashboard.js  JobMatch.js  ResumeCustomizer.js
my-app/: package-lock.json  package.json
public/: index.html
sample_data/job_descriptions/: data_scientist.txt  software_engineer.txt
services/: geminiService.ts
src/: App.js
static/: styles.css
templates/: error.html  index.html  results.html
tests/: test_feedback.py  test_parser.py  test_ranker.py  test_suite.py
tests/fixtures/: sample_resume.txt
utils/: __init__.py  file_handlers.py  nlp_utils.py
