[tool.poetry]
name = "ai-resume-analyzer-backend"
version = "2.0.0"
description = "Modern AI-powered resume analysis and matching system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

# Core Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# AI/ML Stack
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-anthropic = "^0.1.0"
openai = "^1.10.0"
anthropic = "^0.8.0"
chromadb = "^0.4.22"
sentence-transformers = "^2.3.0"
spacy = "^3.7.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
alembic = "^1.13.0"
asyncpg = "^0.29.0"  # PostgreSQL async driver
psycopg2-binary = "^2.9.9"  # PostgreSQL sync driver (for Alembic)

# Caching & Task Queue
redis = {extras = ["hiredis"], version = "^5.0.1"}
celery = {extras = ["redis"], version = "^5.3.4"}
flower = "^2.0.1"  # Celery monitoring

# Authentication
fastapi-users = {extras = ["sqlalchemy", "oauth"], version = "^12.1.3"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"

# File Processing
pymupdf = "^1.23.0"  # Better PDF processing
python-docx = "^1.1.0"
docx2txt = "^0.8"
tika = "^2.6.0"
python-magic = "^0.4.27"

# HTTP Client
httpx = "^0.26.0"

# Utilities
python-dotenv = "^1.0.0"
python-dateutil = "^2.8.2"
email-validator = "^2.1.0"
phonenumbers = "^8.13.0"

# Logging & Monitoring
structlog = "^24.1.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.0"}

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
faker = "^22.0.0"
factory-boy = "^3.3.0"

# Code Quality
ruff = "^0.1.14"
black = "^24.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

# Type Stubs
types-python-dateutil = "^2.8.19"
types-redis = "^4.6.0"

# Development Tools
ipython = "^8.20.0"
ipdb = "^0.13.13"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "chromadb.*",
    "tika.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
